@@ -24,6 +24,7 @@ package net.solarnetwork.node.datum.modbus;
 
 import static java.util.Arrays.asList;
 import static net.solarnetwork.io.StreamUtils.inputStreamForPossibleGzipStream;
+import static net.solarnetwork.util.ObjectUtils.nonnull;
 import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -33,11 +34,11 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.core.io.ByteArrayResource;
@@ -84,8 +85,8 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 
 	private String settingProviderId = ModbusDatumDataSource.SETTING_UID;
 
-	private Throwable lastImportException = null;
-	private List<String> lastImportMessages = null;
+	private @Nullable Throwable lastImportException = null;
+	private @Nullable List<String> lastImportMessages = null;
 
 	/**
 	 * Constructor.
@@ -133,14 +134,14 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 
 	@Override
 	public Collection<String> supportedCurrentResourceSettingKeys() {
-		return Collections.singletonList(RESOURCE_KEY_CSV_FILE);
+		return List.of(RESOURCE_KEY_CSV_FILE);
 	}
 
 	@Override
 	public Iterable<Resource> currentSettingResources(String settingKey) {
 		if ( !RESOURCE_KEY_CSV_FILE.equals(settingKey) ) {
 			log.warn("Ignoring setting resource key [{}]", settingKey);
-			return null;
+			return List.of();
 		}
 		final ByteArrayOutputStream byos = new ByteArrayOutputStream(4096);
 		try (CsvWriter writer = CsvWriter.builder().commentCharacter('!').build(byos)) {
@@ -156,10 +157,10 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 			}
 		} catch ( UncheckedIOException | IOException e ) {
 			log.error("Error generating Modbus Device configuration CSV: {}", e.toString());
-			return Collections.emptyList();
+			return List.of();
 		}
 		return (byos.size() > 0
-				? Collections.singleton(new ByteArrayResource(byos.toByteArray(), "Modbus Device CSV") {
+				? List.of(new ByteArrayResource(byos.toByteArray(), "Modbus Device CSV") {
 
 					@Override
 					public String getFilename() {
@@ -171,11 +172,11 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 					}
 
 				})
-				: Collections.emptyList());
+				: List.of());
 	}
 
 	@Override
-	public synchronized SettingsUpdates applySettingResources(String settingKey,
+	public synchronized @Nullable SettingsUpdates applySettingResources(String settingKey,
 			Iterable<Resource> resources) throws IOException {
 		if ( resources == null ) {
 			return null;
@@ -214,7 +215,7 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 		List<ModbusDatumDataSourceConfig> configs = new ArrayList<>(8);
 		lastImportMessages = new ArrayList<>(8);
 		ModbusDatumDataSourceConfigCsvParser parser = new ModbusDatumDataSourceConfigCsvParser(configs,
-				getMessageSource(), lastImportMessages);
+				nonnull(getMessageSource(), "MessageSource"), lastImportMessages);
 		try (Reader in = new InputStreamReader(
 				inputStreamForPossibleGzipStream(resource.getInputStream()), StandardCharsets.UTF_8);
 				CsvReader<CsvRecord> csv = CsvReader.builder().allowMissingFields(true)
@@ -227,7 +228,8 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 		return configs;
 	}
 
-	private SettingsUpdates toSettingsUpdates(List<ModbusDatumDataSourceConfig> configs) {
+	private @Nullable SettingsUpdates toSettingsUpdates(
+			@Nullable List<ModbusDatumDataSourceConfig> configs) {
 		if ( configs == null || configs.isEmpty() ) {
 			return null;
 		}
@@ -245,8 +247,7 @@ public class ModbusCsvConfigurer extends BasicIdentifiable
 			}
 		}
 
-		SettingsCommand cmd = new SettingsCommand(settings, asList(Pattern.compile(".*")));
-		return cmd;
+		return new SettingsCommand(settings, asList(Pattern.compile(".*")));
 	}
 
 }
